infra/k8s-dev/quoters-depl.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: quoters-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quoters
  template:
    metadata:
      labels:
        app: quoters
    spec: 
      containers:
        - name: quoters
          image: cristiancasd/herbaquoter-quoters  
---
apiVersion: v1
kind: Service
metadata:
  name: quoters-srv
spec: 
  selector:
    app: quoters
  ports:
    - name: quoters
      protocol: TCP
      port: 3010
      targetPort: 3010
