infra/k8s-dev/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec: 
  rules:      

    - host: ticketing-criss.com
      http:
        paths:

    # ********** Auth -NEST ***************
          - path: /doc/auth-products/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-products-srv
                port:
                  number: 3009


          - path: /api/auth/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-products-srv
                port:
                  number: 3009


                  
    # ********** PRODUCTS - NEST ***************
          - path: /api/products/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-products-srv
                port:
                  number: 3009

    # ********** categories - NEST ***************
          - path: /api/categories/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-products-srv
                port:
                  number: 3009

    # ********** SEED - NEST ***************
          - path: /api/seed/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-products-srv
                port:
                  number: 3009

    # ********** FILES - NEST  Products - users ***************
          - path: /api/files/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-products-srv
                port:
                  number: 3009


    # ********** Quoters - NODE ***************
          - path: /api/quoters/?(.*)
            pathType: Prefix
            backend:
              service:
                name: quoters-srv
                port:
                  number: 3010

    # ********** Quoters - NODE ***************
          - path: /api/files-quoters/?(.*)
            pathType: Prefix
            backend:
              service:
                name: quoters-srv
                port:
                  number: 3010

    # ********** DOC SWAGGER - NODE ***************
          - path: /doc/quoters/?(.*)
            pathType: Prefix
            backend:
              service:
                name: quoters-srv
                port:
                  number: 3010

    # ********** CLIENT - REACT ***************
                
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 3011
